Update BlockchainSystemModelLoader.java